[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/UI/Optionsmenu.gd" type="Script" id=1]
[ext_resource path="res://Images/Bird/default2.png" type="Texture" id=2]
[ext_resource path="res://Images/Bird/Pink.png" type="Texture" id=3]
[ext_resource path="res://Images/Bird/Red.png" type="Texture" id=4]
[ext_resource path="res://Images/Bird/Blue.png" type="Texture" id=5]
[ext_resource path="res://Fonts/RobotoMono 32.tres" type="DynamicFont" id=6]
[ext_resource path="res://Images/Bird/Green.png" type="Texture" id=7]

[node name="Optionsmenu" type="Node"]

[node name="Optionsmenu" type="CanvasLayer" parent="."]
pause_mode = 2
scale = Vector2( 1.3, 1.3 )
transform = Transform2D( 1.3, 0, 0, 1.3, 0, 0 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Optionsmenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.99692
margin_top = 5.0
margin_right = 1.99695
margin_bottom = 5.0
color = Color( 0.415686, 0.415686, 0.415686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingTabs" type="TabContainer" parent="Optionsmenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.99692
margin_top = 5.0
margin_right = 1.99695
margin_bottom = 5.0
custom_fonts/font = ExtResource( 6 )
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Tabs" parent="Optionsmenu/SettingTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 61.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="Optionsmenu/SettingTabs/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 14.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioSettings" type="GridContainer" parent="Optionsmenu/SettingTabs/Audio/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1009.0
margin_bottom = 510.0
custom_constants/vseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVol" type="Label" parent="Optionsmenu/SettingTabs/Audio/MarginContainer/AudioSettings"]
margin_right = 247.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 6 )
text = "Master Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="Optionsmenu/SettingTabs/Audio/MarginContainer/AudioSettings"]
margin_left = 251.0
margin_right = 984.0
margin_bottom = 43.0
custom_constants/separation = 250

[node name="HSeparator" type="HSeparator" parent="Optionsmenu/SettingTabs/Audio/MarginContainer/AudioSettings/HBoxContainer"]
margin_right = 3.0
margin_bottom = 43.0

[node name="HBoxContainer" type="HBoxContainer" parent="Optionsmenu/SettingTabs/Audio/MarginContainer/AudioSettings/HBoxContainer"]
margin_left = 253.0
margin_right = 733.0
margin_bottom = 43.0

[node name="VolumeAmount" type="Label" parent="Optionsmenu/SettingTabs/Audio/MarginContainer/AudioSettings/HBoxContainer/HBoxContainer"]
margin_right = 76.0
margin_bottom = 43.0
rect_clip_content = true
size_flags_stretch_ratio = 20.0
custom_fonts/font = ExtResource( 6 )
text = "100%"
align = 2

[node name="MasterSlider" type="HSlider" parent="Optionsmenu/SettingTabs/Audio/MarginContainer/AudioSettings/HBoxContainer/HBoxContainer"]
margin_left = 80.0
margin_right = 480.0
margin_bottom = 43.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
step = 0.5
value = -50.0
rounded = true

[node name="GamePlay" type="Tabs" parent="Optionsmenu/SettingTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 61.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer3" type="MarginContainer" parent="Optionsmenu/SettingTabs/GamePlay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameplaySettings" type="GridContainer" parent="Optionsmenu/SettingTabs/GamePlay/MarginContainer3"]
margin_left = 25.0
margin_top = 25.0
margin_right = 991.0
margin_bottom = 510.0
custom_constants/vseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Label" parent="Optionsmenu/SettingTabs/GamePlay/MarginContainer3/GameplaySettings"]
margin_right = 114.0
margin_bottom = 43.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 6 )
text = "Colour"

[node name="Collumn" type="HBoxContainer" parent="Optionsmenu/SettingTabs/GamePlay/MarginContainer3/GameplaySettings"]
margin_left = 226.0
margin_right = 966.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( -674.107, 285.776 )
size_flags_horizontal = 10
custom_constants/separation = 40

[node name="Yellow" type="Sprite" parent="Optionsmenu/SettingTabs/GamePlay/MarginContainer3/GameplaySettings/Collumn"]
position = Vector2( -115.792, 35 )
scale = Vector2( 0.1, 0.1 )
z_index = 2
texture = ExtResource( 2 )

[node name="Green" type="Sprite" parent="Optionsmenu/SettingTabs/GamePlay/MarginContainer3/GameplaySettings/Collumn"]
position = Vector2( -115.792, 35 )
scale = Vector2( 0.1, 0.1 )
z_index = 2
texture = ExtResource( 7 )

[node name="Red" type="Sprite" parent="Optionsmenu/SettingTabs/GamePlay/MarginContainer3/GameplaySettings/Collumn"]
position = Vector2( -115.792, 35 )
scale = Vector2( 0.1, 0.1 )
z_index = 2
texture = ExtResource( 4 )

[node name="Blue" type="Sprite" parent="Optionsmenu/SettingTabs/GamePlay/MarginContainer3/GameplaySettings/Collumn"]
position = Vector2( -115.792, 35 )
scale = Vector2( 0.1, 0.1 )
z_index = 2
texture = ExtResource( 5 )

[node name="Pink" type="Sprite" parent="Optionsmenu/SettingTabs/GamePlay/MarginContainer3/GameplaySettings/Collumn"]
position = Vector2( -115.792, 35 )
scale = Vector2( 0.1, 0.1 )
z_index = 2
texture = ExtResource( 3 )

[node name="SpriteSlider" type="HSlider" parent="Optionsmenu/SettingTabs/GamePlay/MarginContainer3/GameplaySettings/Collumn"]
margin_right = 400.0
margin_bottom = 43.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 4.0
rounded = true

[node name="HBoxContainer" type="HBoxContainer" parent="Optionsmenu/SettingTabs/GamePlay/MarginContainer3/GameplaySettings/Collumn"]
margin_left = 440.0
margin_right = 740.0
margin_bottom = 43.0
custom_constants/separation = 300
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="Optionsmenu/SettingTabs/GamePlay/MarginContainer3/GameplaySettings/Collumn/HBoxContainer"]
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer2" type="HSplitContainer" parent="Optionsmenu/SettingTabs/GamePlay/MarginContainer3/GameplaySettings/Collumn/HBoxContainer"]
margin_left = 300.0
margin_right = 300.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video" type="Tabs" parent="Optionsmenu/SettingTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 61.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="Optionsmenu/SettingTabs/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VideoSettings" type="GridContainer" parent="Optionsmenu/SettingTabs/Video/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 991.0
margin_bottom = 510.0
custom_constants/vseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="Optionsmenu"]
margin_left = 933.0
margin_top = 5.0
margin_right = 1021.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Save"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="Optionsmenu/SettingTabs/Audio/MarginContainer/AudioSettings/HBoxContainer/HBoxContainer/MasterSlider" to="Optionsmenu" method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="Optionsmenu/SettingTabs/GamePlay/MarginContainer3/GameplaySettings/Collumn/SpriteSlider" to="Optionsmenu" method="_on_SpriteSlider_value_changed"]
[connection signal="pressed" from="Optionsmenu/Save" to="Optionsmenu" method="_on_Save_pressed"]
